--- a/index.html
+++ b/index.html
@@ -10,22 +10,63 @@
 </head>
 <body>
     <main>
+
         <div class="container-fluid px-5 pt-5">
-            <div class="row px-5">
-                <div class="col-12 text-center" style="padding: 0px 311px;">
-                    <p class="fs-4">OUR TEAM</p>
-                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis at eveniet, provident, consequatur dolorum labore, fuga placeat quis recusandae aut fugiat pariatur cupiditate. Facilis aperiam voluptatibus doloremque vel obcaecati sunt?</h5>
+            <div class="row">
+                <div class="col-12 text-center pb-5" style="padding: 0px 311px;">
+                    <p class="fs-4 text-dark">OUR TEAM</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis at eveniet, provident, consequatur dolorum labore, fuga placeat quis recusandae aut fugiat pariatur cupiditate. Facilis aperiam voluptatibus doloremque vel obcaecati sunt?</p>
                 </div>
-                <div class="col-4 d-flex justify-content-center">
-                    <img src="img/wayne-barnett-founder-ceo.jpg" alt="wayne-barnett-founder-ceo">
-                </div>
-                <div class="col-4"></div>
-                <div class="col-4"></div>
-                <div class="col-4"></div>
-                <div class="col-4"></div>
-                <div class="col-4"></div>
             </div>
         </div>
+
+        <div class="container" id="team">
+            <div class="row">
+                <div class="col-4 d-flex align-items-center flex-column">
+                    <img src="img/wayne-barnett-founder-ceo.jpg" alt="wayne-barnett-founder-ceo">
+                    <div class="dettagli-personale flex-column text-center">
+                        <h5 class="fs-5 mb-1" id="name"></h5> 
+                        <h6 id="role"></h6>
+                    </div>
+                </div>
+                <div class="col-4 d-flex align-items-center flex-column">
+                    <img src="img/angela-caroll-chief-editor.jpg" alt="angela-caroll-chief-editor">
+                    <div class="dettagli-personale flex-column text-center">
+                        <h5 class="fs-5 mb-1" id="name"></h5> 
+                        <h6 id="role"></h6>
+                    </div>
+                </div>
+                <div class="col-4 d-flex align-items-center flex-column">
+                    <img src="img/walter-gordon-office-manager.jpg" alt="walter-gordon-office-manager">
+                    <div class="dettagli-personale flex-column text-center">
+                        <h5 class="fs-5 mb-1" id="name"></h5> 
+                        <h6 id="role"></h6>
+                    </div>
+                </div>
+                <div class="col-4 d-flex align-items-center flex-column">
+                    <img src="img/angela-lopez-social-media-manager.jpg" alt="angela-lopez-social-media-manager">
+                    <div class="dettagli-personale flex-column text-center">
+                        <h5 class="fs-5 mb-1" id="name"></h5> 
+                        <h6 id="role"></h6>
+                    </div>
+                </div>
+                <div class="col-4 d-flex align-items-center flex-column">
+                    <img src="img/scott-estrada-developer.jpg" alt="scott-estrada-developer">
+                    <div class="dettagli-personale flex-column text-center">
+                        <h5 class="fs-5 mb-1" id="name"></h5> 
+                        <h6 id="role"></h6>
+                    </div>
+                </div>
+                <div class="col-4 d-flex align-items-center flex-column">
+                    <img src="img/barbara-ramos-graphic-designer.jpg" alt="barbara-ramos-graphic-designer">
+                    <div class="dettagli-personale flex-column text-center">
+                        <h5 class="fs-5 mb-1" id="name"></h5> 
+                        <h6 id="role"></h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </main>
 
 
