--- a/index.html
+++ b/index.html
@@ -20,62 +20,10 @@
             </div>
         </div>
 
-        <div class="container" id="team">
-            <div class="row">
-                <div class="col-4 d-flex align-items-center flex-column">
-                    <img src="img/wayne-barnett-founder-ceo.jpg" alt="wayne-barnett-founder-ceo">
-                    <div class="dettagli-personale flex-column text-center">
-                        <h5 class="fs-5 mb-1" id="name-1"></h5> 
-                        <h6 id="role-1"></h6>
-                    </div>
-                </div>
-                <div class="col-4 d-flex align-items-center flex-column">
-                    <img src="img/angela-caroll-chief-editor.jpg" alt="angela-caroll-chief-editor">
-                    <div class="dettagli-personale flex-column text-center">
-                        <h5 class="fs-5 mb-1" id="name-2"></h5> 
-                        <h6 id="role-2"></h6>
-                    </div>
-                </div>
-                <div class="col-4 d-flex align-items-center flex-column">
-                    <img src="img/walter-gordon-office-manager.jpg" alt="walter-gordon-office-manager">
-                    <div class="dettagli-personale flex-column text-center">
-                        <h5 class="fs-5 mb-1" id="name-3"></h5> 
-                        <h6 id="role-3"></h6>
-                    </div>
-                </div>
-                <div class="col-4 d-flex align-items-center flex-column">
-                    <img src="img/angela-lopez-social-media-manager.jpg" alt="angela-lopez-social-media-manager">
-                    <div class="dettagli-personale flex-column text-center">
-                        <h5 class="fs-5 mb-1" id="name-4"></h5> 
-                        <h6 id="role-4"></h6>
-                    </div>
-                </div>
-                <div class="col-4 d-flex align-items-center flex-column">
-                    <img src="img/scott-estrada-developer.jpg" alt="scott-estrada-developer">
-                    <div class="dettagli-personale flex-column text-center">
-                        <h5 class="fs-5 mb-1" id="name-5"></h5> 
-                        <h6 id="role-5"></h6>
-                    </div>
-                </div>
-                <div class="col-4 d-flex align-items-center flex-column">
-                    <img src="img/barbara-ramos-graphic-designer.jpg" alt="barbara-ramos-graphic-designer">
-                    <div class="dettagli-personale flex-column text-center">
-                        <h5 class="fs-5 mb-1" id="name-6"></h5> 
-                        <h6 id="role-6"></h6>
-                    </div>
-                </div>
-            </div>
+        <div class="container py-5" id="output">
         </div>
 
     </main>
-
-
-
-
-
-
-
-
 
 
     <script src="js/main.js" type="text/javascript"></script>
